[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-hashid"
version = "0.1.1"
description = "Identify hash types and estimate crack cost/feasibility"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "tactical", "hashid"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/hashid"

[project.scripts]
"hashid-emit" = "hashid.connect:emit_main"
hashid = "hashid.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["hashid"]
